# hub-markitdown-mcp

./: .dockerignore  Dockerfile  README.md  auth.py  docker-compose.yml  pyproject.toml  server.py
